--- a/Euro_Crime_Analysis.Rmd
+++ b/Euro_Crime_Analysis.Rmd
@@ -143,7 +143,6 @@ animate(p1,  width = 900, height = 750, end_pause = 50, renderer = gifski_render
 
 Plotting the total number of offences in order (top 10) for each year:
 ``` {r Visualizing data2, warning=FALSE}
-
 p2 <- crime.total %>%
     group_by(TIME) %>%
     mutate(ordering = rank(-Totals)) %>%
@@ -153,7 +152,7 @@ p2 <- crime.total %>%
   geom_col(width = 0.8, position = "identity") +
   coord_flip() +
   geom_text(aes(-ordering, y=0, label = GEO, hjust=0)) +       #country label
-  geom_text(aes(-ordering, y=Totals, label = Totals, hjust=0)) + # value label
+  geom_text(aes(-ordering, y=Totals, label = scales::number(Totals,accuracy = 0.1,big.mark = ""), hjust=0)) + # value label
   theme_minimal() +
   theme(legend.position = "none",axis.text.y=element_blank(), axis.ticks.y = element_blank()) +
   labs(y = "Offences per thousand inhabitants",
